# ls-Improved

./: .description.lsi  .fgo_emoji_list.txt  .gitignore  Cargo.toml  Dockerfile  LICENSE  MANIFEST.in  README.ja.md  README.md  REFACTORING.md  docker-compose.yml  install.sh  setup.py  uninstall.sh
.github/workflows/: release-dpkg.yml  release.yml
doc/: development.md
ls-Improved/: Cargo.toml
ls-improved/: Cargo.toml
ls-improved/src/: args.yml  colors.rs  config.rs  controller.rs  decoration.rs  fs.rs  lsi.rs  main.rs  view.rs
ls-improved/src/controller/: fs.rs  mod.rs
ls-improved/src/lsi/: fs.rs  mod.rs  path.rs  view.rs
ls-improved/src/models/: errors.rs  mod.rs  path.rs
ls-improved/src/view/: decoration.rs  mod.rs
ls_improved/: .gitignore  __init__.py  config.py  lsi.py  lsi_content.py  lsi_itemloader.py  lsi_ref.py  lsi_text.py  lsi_visual.py  mkdiri.py
ls_improved-python/: __init__.py  lsi_itemloader.py  lsi_visual.py  mkdiri.py
src/: .description.lsi  args.yml  colors.rs  config.rs  controller.rs  decoration.rs  errors.rs  file_description.rs  fs.rs  lib.rs  lsi.rs  main.rs  mkdiri.rs  path.rs  view.rs
src/.file_description_lsi/: .args.yml.lsi  .colors.rs.lsi  .config.rs.lsi  .decoration.rs.lsi  .errors.rs.lsi  .fs.rs.lsi  .lsi.rs.lsi  .main.rs.lsi  .mkdiri.rs.lsi  .path.rs.lsi  .view.rs.lsi
test/: .description.lsi
