[package]
name = "ls-improved"
version = "0.1.0"
authors = ["ShotaroKataoka <s183347@stn.nagaokaut.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lsi"
path = "src/lsi.rs"

[dependencies]
colored = "2"
exitcode = "1.1.2"
clap = "2.33.3"
