[package]
name = "ls-improved"
version = "0.1.0"
authors = ["ShotaroKataoka <s183347@stn.nagaokaut.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lsi"
path = "src/main.rs"

[dependencies]
exitcode = "1.1.2"
clap = {version = "2.33.3", features = ["yaml"]}
thiserror = "1.0.26"
anyhow = "1.0.42"
regex = "1.5.4"
toml = "0.5.8"
serde = { version = "1.0.129", features = ["derive"] }
serde_derive = "1.0.129"
unicode-width = "0.1.8"
